Fix CORS and backend URL for Selenium tests
- Add http://host.docker.internal:5173 to CORS allowed origins
- Add Docker bridge IPs to CORS allowed origins
- Frontend uses http://backend:8080/api when accessed from Docker network
- This fixes 'Kayıt olurken bir hata oluştu' error in Selenium tests
- Browser in Jenkins container can now access backend via Docker network